<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stop The Watch</string>
    <string name="app_id">434235193251</string>
    <string name="action_settings">Settings</string>
    <string name="best_">Best:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="score_">Score:</string>
    <string name="tally_">"Tally: "</string>
    <string name="rules">Rules</string>
    <string name="ads_go_here">ads go here</string>
    <string name="start">Start</string>
    <string name="gameOver">Game Over</string>
    <string name="new_game">New Game</string>
    <string name="yes_option">Yes</string>
    <string name="no_option">No</string>
    <string name="rule1">Resets the clock to 00:00:00 and Tally to 20.</string>
   <string name="rule2">When you click Start, the stop watch starts ticking. It pauses when you click Stop and resumes when you click Start again. Whenever you Stop the Clock, the Tally and Score gets updated.</string>
    <string name="rule3">25, 50, 75 are Milestones. 00, 11, 22,..., 99 are Special Numbers.</string>
     <!-- <string name="rule4">When you stop, if the number represented by the last 2 digits (milliseconds) is a multiple of 25, your Tally gets increased by that multiplier. If the last 
        two digits are 00, your Tally gets increased by 4. Otherwise, your Tally will be decreased by the number you are off from the closest multiplier of 25. </string> -->
    <string name="rule4">When you Stop, if the number represented by the last 2 digits is a Special Number, you get +5 points on your Tally. \nIf it is 25, 50, 75 (MileStones), you get +1, +2 and +3 respectively.\nIf it is not one of the above, your tally will be decreased by how far it is from the closest Special Number or a Milestone.</string>
    <string name="rule5">Score gets incremented by 1 each time you Stop without making the tally 0. The game ends when your Tally reaches 0. \nSome Sample Stops and the points awarded are shown below</string>
    <!--  <string name="rule7">\n* For Math champs : When you stop, if the number represented by the last 2 digits (milliseconds) is a multiple of 25, your Tally gets increased by that multiplier. If the last 
        two digits are 00,11,22,.. your Tally gets increased by 5. Otherwise, your Tally will be decreased by the number you are off from the closest Special number. </string>-->
         <string name="rule7"></string>
         
    <!-- <string name="rule2">2</string><string name="rule4">1</string>
    <string name="rule5">2</string>
    -->
    <string name="rule6">Good Luck!!! Keep Clocking</string>
    <string name="accept">Accept</string>
<string name="eula">COPYRIGHTS:
 
\nCopyright 2014 \"Stop The Watch\". All Rights Reserved.
 
\n\nThis software may not, in whole or in any part, be copied, reproduced, transmitted, translated (into any
language, natural or computer), stored in a retrieval system, reduced to any electronic medium or machine readable
format, or by any other form or means without prior consent, in writing, from stw.theapp@gmail.com.
 
\n\nYou are granted a limited license to use this software. The software may be used or copied only in accordance
with the terms of that license, which is described in the following paragraphs.
 
\n\nTRADEMARKS:
\n\n[Software logos, icons, etc that are Trademarked]
 
\n\nLICENSE:
\n\n\"THE SOFTWARE\" shall be taken to mean the software contained in this app and any subsequent versions
or upgrades received as a result of having purchased this app. \"BUYER\" shall be taken as the original
purchaser of the software.
 
\n\nUser may not disassemble the program or allow it to be disassembled
into its constituent source code. Buyer\'s use of the software indicates his/her acceptance of these terms
and conditions. If buyer does not agree to these conditions, return the distribution media, documentation, and
associated materials to the vendor from whom the software was purchased, and/or uninstall the software from the device,
and erase the software from any and all storage devices upon which it may have been installed.
 
\n\nThis license agreement shall be governed by the laws of The United States of America, Massachusetts
 
\n\nDISCLAIMER / LIMITATION OF LIABILITY:
\n\nBuyer acknowledges that the software may not be free from defects and may not satisfy all of buyer\'s
needs. In no event will \"Stop The Watch\" be liable for direct, indirect, incidental or consequential damage or
damages resulting from loss of use, or loss of anticipated profits resulting from any defect in the software,
even if it has been advised of the possibility of such damage. 
 </string>
<string name="new_game_rule"><u>New Game</u></string>
<string name="start_rule"><u>Start/Stop</u></string>
<string name="stop_rule"><u>Stop</u></string>
<string name="scoring_rule"><u>Scoring</u></string>
<string name="last_two">Last Two</string>
<string name="points">Points</string>
<string name="leaderboard_button_text">Leaderboard</string>
</resources>
